# LearnPilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: 学习计划.md  学习路线图.md
docs/superpowers/plans/: 2026-04-12-learnpilot-foundation.md  2026-04-12-phase1-llm-direct-call.md
learn/: 01_hello_llm.py  02_conversation.py  03_streaming.py  04_tools.py
src/: config.py  storage.py  storage_plans.py
src/agent/: graph.py  homework_graph.py  lesson_graph.py  nodes.py  plan_graph.py  plan_node.py  report_graph.py  state.py  syllabus_graph.py  utils.py
src/api/: book.py  chat.py  homework.py  lesson.py  plan.py  syllabus.py  ui.py
src/rag/: knowledge_base.py  parsers.py
src/schemas/: homework.py  lesson.py  plan.py  report.py  syllabus.py
src/tools/: search.py
